--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -26,7 +26,8 @@ jobs:
     defaults:
       run:
         shell: bash # Use the Bash shell regardless of the os
-        working-directory: iac
+        working-directory: ./iac
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
