--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -14,6 +14,14 @@ on:
         description: "Specify the Terraform action: apply or destroy"
         required: true
         default: "apply"
+      environment:
+        description: "Specify the environment"
+        required: true
+        default: "dev"
+        type: choice
+        options:
+          - dev
+          - prod
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -59,14 +67,14 @@ jobs:
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color -input=false
+      run: terraform plan -no-color -input=false -var-file=env/${{ github.event.inputs.environment }}.tfvars
       continue-on-error: true
       
 
     - name: Execute Terraform Action
       run: |
         if [ "${{ github.event.inputs.action }}" == "destroy" ]; then
-          terraform destroy -auto-approve
+          terraform destroy -auto-approve -var-file=env/${{ github.event.inputs.environment }}.tfvars
         else
-          terraform apply -auto-approve
+          terraform apply -auto-approve -var-file=env/${{ github.event.inputs.environment }}.tfvars
         fi
