--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -1,4 +1,4 @@
-name: EKS Terraform Deployment
+name: Terraform Deployment
 on:
  # push:
     #branches:
@@ -63,7 +63,7 @@ jobs:
 
     - name: Initialize Terraform
       id: init
-      run: terraform init -input=false -backend-config=../../ecr.backend.tf
+      run: terraform init -input=false -backend-config=../../${{ github.event.inputs.stack }}.backend.tf
 
     - name: Validate Terraform
       id: validate
