--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -71,7 +71,7 @@ jobs:
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color -input=false -var-file=../../env/${{ github.event.inputs.environment }}.tfvars
+      run: terraform plan -no-color -input=false -var-file=../../env/${{ github.event.inputs.stack }}.tfvars
       continue-on-error: true
       
 
