--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -67,7 +67,7 @@ jobs:
 
     - name: Initialize Terraform
       id: init
-      run: terraform init -input=false -backend-config=../../${{ github.event.inputs.stack }}.backend.tf
+      run: terraform init -input=false -backend-config=../${{ github.event.inputs.stack }}.backend.tf
 
     - name: Validate Terraform
       id: validate
