--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
     inputs:
       stack:
-        description: "Specify the component you want to deploy"
+        description: "Specify the component you want to provision"
         required: true
         default: ecr
       action:
@@ -67,7 +67,10 @@ jobs:
 
     - name: Initialize Terraform
       id: init
-      run: terraform init -input=false -backend-config=../${{ github.event.inputs.stack }}.backend.tf
+      run: |
+         pwd
+         terraform init -input=false -backend-config=../../${{ github.event.inputs.stack }}.backend.tf
+      
 
     - name: Validate Terraform
       id: validate
@@ -75,7 +78,9 @@ jobs:
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color -input=false -var-file=../../env/${{ github.event.inputs.stack }}.tfvars
+      run: |
+         pwd
+         terraform plan -no-color -input=false -var-file=../../env/${{ github.event.inputs.stack }}.tfvars
       continue-on-error: true
       
 
@@ -87,7 +92,3 @@ jobs:
           terraform apply -auto-approve -var-file=../../env/${{ github.event.inputs.stack }}.tfvars
         fi
         
-    - name: Show Terraform State Backend
-      run: |
-        terraform providers
-        terraform show -json | jq '.values.root_module.resources[].address'
