--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -65,11 +65,18 @@ jobs:
       run: terraform fmt -check
       continue-on-error: true
 
+    - name: Setup Terraform Backend
+      id: backend
+      run: cat ../../${{ github.event.inputs.stack }}.backend.tf > backend.conf
+    
+    - name: Terraform Init
+      run: terraform init -backend-config=backend.conf
+
     - name: Initialize Terraform
       id: init
       run: |
          pwd
-         terraform init -input=false -backend-config=../../${{ github.event.inputs.stack }}.backend.tf
+         terraform init -input=false -backend-config=backend.conf
       
 
     - name: Validate Terraform
