--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -19,7 +19,7 @@ on:
           - rds
           - ecr
           - vpc
-          - ecr
+          - ecs
       action:
         description: "Specify the Terraform action: apply or destroy"
         required: true
