--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -20,7 +20,7 @@ env:
   IMAGE_TAG: latest
 
 jobs:
-  terraform:
+  ecr:
     runs-on: ubuntu-latest
 
     steps:
@@ -32,8 +32,9 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        role-to-assume: arn:aws:iam::340752832652:user/ECRuser
         aws-region: eu-central-1
-      
+          
     - name: Login to Amazon ECR
       id: login-ecr
       run: aws-actions/amazon-ecr-login@v2
