--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -48,7 +48,8 @@ jobs:
       run: |
           IMAGE_URI=$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
           echo "Building image: $IMAGE_URI"
-          docker build -t $IMAGE_URI -f app/Dockerfile app/
+          docker build -t $IMAGE_URI app/
+          docker tag $ECR_REPO:$IMAGE_TAG $IMAGE_URI
           docker push $IMAGE_URI
 
     - name: Output image URI
