--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,7 +16,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_DEFAULT_REGION: eu-central-1
   AWS_REGION: ${{ secrets.AWS_REGION }}
-  ECR_REPO: cozero                
+  ECR_REPO: cozero-repo             
   IMAGE_TAG: latest
 
 jobs:
