--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Build, tag, and push image
+name: Build, tag, push image and deploy
 on:
  # push:
     #branches:
@@ -49,9 +49,8 @@ jobs:
           IMAGE_URI=$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
           echo "Building image: $IMAGE_URI"
           docker build -t $IMAGE_URI app/
-          docker images
-          echo "@@@@@@@@@@@@@@@@@@"
           docker push $IMAGE_URI
 
-    - name: Output image URI
-      run: echo "Docker image pushed to ${{ steps.login-ecr.outputs.registry }}/$ECR_REPO:$IMAGE_TAG"
+    - name: Force new deployment to ECS
+      run: |
+        aws ecs update-service --cluster cozero-cluster --service cozero-service --force-new-deployment
